@@ -31,7 +31,6 @@
  * @run clean NonJMXPrincipalsTest SimpleStandard SimpleStandardMBean
  * @run build NonJMXPrincipalsTest SimpleStandard SimpleStandardMBean
  * @run main/othervm NonJMXPrincipalsTest
- * @run main/othervm -Djava.security.manager=allow NonJMXPrincipalsTest
  */
 
 import java.io.File;
